--- a/src/gui/DepartmentForm.fxml
+++ b/src/gui/DepartmentForm.fxml
@@ -10,13 +10,12 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 
-
-<AnchorPane prefHeight="131.0" prefWidth="453.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.1">
+<AnchorPane prefHeight="131.0" prefWidth="489.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.DepartmentFormController">
    <children>
       <GridPane layoutX="22.0" layoutY="6.0" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="20.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="95.20001220703125" minWidth="10.0" prefWidth="54.4000244140625" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="145.5999755859375" minWidth="10.0" prefWidth="145.5999755859375" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="145.5999755859375" minWidth="10.0" prefWidth="300.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
         <rowConstraints>
@@ -27,13 +26,13 @@
          <children>
             <Label text="Id" />
             <Label text="Name" GridPane.rowIndex="1" />
-            <Label textFill="#f00303" GridPane.rowIndex="2" />
-            <TextField editable="false" prefHeight="26.0" prefWidth="97.0" GridPane.columnIndex="1" />
-            <TextField prefHeight="26.0" prefWidth="97.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Label fx:id="lblErrorName" prefHeight="18.0" prefWidth="4.0" textFill="#f00303" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+            <TextField fx:id="txtId" editable="false" prefHeight="26.0" prefWidth="194.0" GridPane.columnIndex="1" />
+            <TextField fx:id="txtName" prefHeight="26.0" prefWidth="174.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <HBox prefHeight="100.0" prefWidth="200.0" spacing="20.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                <children>
-                  <Button mnemonicParsing="false" text="Save" textAlignment="CENTER" />
-                  <Button mnemonicParsing="false" text="Cancel" />
+                  <Button fx:id="btSave" mnemonicParsing="false" onAction="#onBtSaveAction" text="Save" textAlignment="CENTER" />
+                  <Button fx:id="btCancel" mnemonicParsing="false" onAction="#onBtCancelAction" text="Cancel" />
                </children>
                <padding>
                   <Insets bottom="10.0" left="15.0" right="5.0" top="15.0" />
