--- a/src/gui/DepartmentForm.fxml
+++ b/src/gui/DepartmentForm.fxml
@@ -10,13 +10,13 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane prefHeight="131.0" prefWidth="489.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.DepartmentFormController">
+<AnchorPane prefHeight="152.0" prefWidth="539.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.DepartmentFormController">
    <children>
-      <GridPane layoutX="22.0" layoutY="6.0" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="20.0">
+      <GridPane layoutX="22.0" layoutY="8.0" prefHeight="103.0" prefWidth="212.0" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="8.0">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="95.20001220703125" minWidth="10.0" prefWidth="54.4000244140625" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="145.5999755859375" minWidth="10.0" prefWidth="300.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints maxWidth="95.20001220703125" minWidth="10.0" prefWidth="60.800028228759764" />
+          <ColumnConstraints maxWidth="405.19999999999993" minWidth="10.0" prefWidth="151.6" />
+            <ColumnConstraints maxWidth="285.39996337890625" minWidth="0.0" prefWidth="0.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -26,9 +26,8 @@
          <children>
             <Label text="Id" />
             <Label text="Name" GridPane.rowIndex="1" />
-            <Label fx:id="lblErrorName" prefHeight="18.0" prefWidth="4.0" textFill="#f00303" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-            <TextField fx:id="txtId" editable="false" prefHeight="26.0" prefWidth="194.0" GridPane.columnIndex="1" />
-            <TextField fx:id="txtName" prefHeight="26.0" prefWidth="174.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id="txtId" editable="false" prefHeight="26.0" prefWidth="189.0" GridPane.columnIndex="1" />
+            <TextField fx:id="txtName" prefHeight="26.0" prefWidth="234.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <HBox prefHeight="100.0" prefWidth="200.0" spacing="20.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                <children>
                   <Button fx:id="btSave" mnemonicParsing="false" onAction="#onBtSaveAction" text="Save" textAlignment="CENTER" />
@@ -40,5 +39,6 @@
             </HBox>
          </children>
       </GridPane>
+      <Label fx:id="lblErrorName" layoutX="427.0" layoutY="50.0" prefHeight="18.0" prefWidth="91.0" textFill="#f00303" />
    </children>
 </AnchorPane>
