--- a/src/gui/SellerForm.fxml
+++ b/src/gui/SellerForm.fxml
@@ -1,60 +1,110 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.SellerFormController">
+<AnchorPane prefHeight="262.0" prefWidth="719.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.SellerFormController">
    <children>
-      <Pane layoutY="-15.0" prefHeight="299.0" prefWidth="669.0">
+      <GridPane layoutX="24.0" layoutY="21.0" prefHeight="216.0" prefWidth="676.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="143.20001220703125" minWidth="10.0" prefWidth="92.00001220703125" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="306.4000244140625" minWidth="10.0" prefWidth="306.3999877929688" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="300.0" minWidth="10.0" prefWidth="216.79998779296875" />
+        </columnConstraints>
+        <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="33.199987792968756" minHeight="10.0" prefHeight="33.199987792968756" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="39.600012207031256" minHeight="10.0" prefHeight="35.600012207031256" vgrow="SOMETIMES" />
+        </rowConstraints>
          <children>
-            <TextField fx:id="txtName" layoutX="111.0" layoutY="23.0" prefHeight="25.0" prefWidth="350.0" />
-            <TextField fx:id="txtEmail" layoutX="111.0" layoutY="62.0" prefHeight="25.0" prefWidth="350.0" />
-            <TextField fx:id="txtBirthDate" layoutX="111.0" layoutY="98.0" prefHeight="25.0" prefWidth="150.0" />
-            <TextField fx:id="txtBaseSalary" layoutX="111.0" layoutY="135.0" prefHeight="26.0" prefWidth="150.0" />
-            <Label layoutX="14.0" layoutY="27.0" text="Name:" textAlignment="JUSTIFY">
+            <Label prefWidth="300.0" text="Name:" textAlignment="JUSTIFY" GridPane.rowIndex="1">
                <font>
                   <Font name="System Bold Italic" size="12.0" />
                </font>
             </Label>
-            <Label layoutX="14.0" layoutY="66.0" text="Email:">
+            <Label text="Email:" GridPane.rowIndex="2">
                <font>
                   <Font name="System Bold Italic" size="12.0" />
                </font>
             </Label>
-            <Label layoutX="14.0" layoutY="102.0" text="BirthDate:">
+            <Label text="BirthDate:" GridPane.rowIndex="3">
                <font>
                   <Font name="System Bold Italic" size="12.0" />
                </font>
             </Label>
-            <Label layoutX="14.0" layoutY="144.0" text="Base Salary:">
+            <Label text="Base Salary:" GridPane.rowIndex="4">
                <font>
                   <Font name="System Bold Italic" size="12.0" />
                </font>
             </Label>
-            <Label layoutX="14.0" layoutY="180.0" text="Department:">
+            <Label text="Department:" GridPane.rowIndex="5">
                <font>
                   <Font name="System Bold Italic" size="12.0" />
                </font>
             </Label>
-            <ComboBox fx:id="cbDepartment" layoutX="111.0" layoutY="176.0" onAction="#onCbDepartmentAction" prefWidth="150.0" />
-            <Separator layoutX="1.0" layoutY="234.0" prefHeight="3.0" prefWidth="670.0" />
-            <Button fx:id="btSave" layoutX="217.0" layoutY="255.0" mnemonicParsing="false" onAction="#onBtSaveAction" prefHeight="30.0" prefWidth="50.0" text="Save">
+            <TextField fx:id="txtName" prefHeight="25.0" prefWidth="350.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id="txtEmail" prefHeight="25.0" prefWidth="350.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField fx:id="txtBaseSalary" alignment="TOP_RIGHT" prefHeight="26.0" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <ComboBox fx:id="cbDepartment" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0" GridPane.columnIndex="1" GridPane.rowIndex="6">
+               <children>
+                  <Button fx:id="btSave" mnemonicParsing="false" onAction="#onBtSaveAction" prefHeight="30.0" prefWidth="50.0" text="Save">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                  </Button>
+                  <Button fx:id="btCancel" mnemonicParsing="false" onAction="#onBtCancelAction" prefHeight="30.0" prefWidth="55.0" text="Cancel">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                  </Button>
+               </children>
+               <GridPane.margin>
+                  <Insets bottom="10.0" top="10.0" />
+               </GridPane.margin>
+            </HBox>
+            <DatePicker fx:id="dpBirthDate" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <Label prefWidth="300.0" text="Id:" textAlignment="JUSTIFY">
                <font>
-                  <Font name="System Bold" size="12.0" />
+                  <Font name="System Bold Italic" size="12.0" />
                </font>
-            </Button>
-            <Button fx:id="btCancel" layoutX="294.0" layoutY="255.0" mnemonicParsing="false" onAction="#onBtCancelAction" prefHeight="30.0" prefWidth="55.0" text="Cancel">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font>
-            </Button>
+            </Label>
+            <TextField fx:id="txtId" editable="false" opacity="0.53" prefHeight="25.0" prefWidth="350.0" GridPane.columnIndex="1" />
+            <Label fx:id="lblErrorName" prefHeight="18.0" prefWidth="231.0" textFill="#ff0303" GridPane.columnIndex="2" GridPane.rowIndex="1">
+               <GridPane.margin>
+                  <Insets left="10.0" />
+               </GridPane.margin>
+            </Label>
+            <Label fx:id="lblErrorEmail" prefHeight="18.0" prefWidth="234.0" textFill="#ff0303" GridPane.columnIndex="2" GridPane.rowIndex="2">
+               <GridPane.margin>
+                  <Insets left="10.0" />
+               </GridPane.margin>
+            </Label>
+            <Label fx:id="lblErrorBirthDate" prefHeight="18.0" prefWidth="238.0" textFill="#ff0303" GridPane.columnIndex="2" GridPane.rowIndex="3">
+               <GridPane.margin>
+                  <Insets left="10.0" />
+               </GridPane.margin>
+            </Label>
+            <Label fx:id="lblErrorBSalary" prefHeight="18.0" prefWidth="243.0" textFill="#ff0303" GridPane.columnIndex="2" GridPane.rowIndex="4">
+               <GridPane.margin>
+                  <Insets left="10.0" />
+               </GridPane.margin>
+            </Label>
          </children>
-      </Pane>
+      </GridPane>
    </children>
 </AnchorPane>
